--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </div>
-            <p class="copyright">&copy; 2025 Maharaja Salon. All rights reserved.</p>
+            <p class="copyright">&copy; 2025 Maharaja Salon. All rights reserved. <a href="admin-login.html" style="color: #666; text-decoration: none; margin-left: 10px; font-size: 0.9em;">Admin Login</a></p>
         </div>
     </footer>
     <script>
