--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -37,6 +37,31 @@
             color: #ffcc00;
         }
 
+        .nav-menu {
+            display: flex;
+            gap: 20px;
+            margin-right: 20px;
+        }
+
+        .nav-menu button {
+            background: none;
+            border: none;
+            color: #ffcc00;
+            cursor: pointer;
+            font-size: 16px;
+            padding: 5px 10px;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+
+        .nav-menu button:hover {
+            background-color: rgba(255, 204, 0, 0.1);
+        }
+
+        .nav-menu button.active {
+            background-color: rgba(255, 204, 0, 0.2);
+        }
+
         .logout-btn {
             background-color: #dc3545;
             color: white;
@@ -189,6 +214,10 @@
     <div class="dashboard-container">
         <header>
             <h1>Admin Dashboard</h1>
+            <div class="nav-menu">
+                <button onclick="showSection('bookings')" class="active">Bookings</button>
+                <button onclick="showSection('services')">Services</button>
+            </div>
             <button class="logout-btn" onclick="logout()">Logout</button>
         </header>
 
@@ -211,7 +240,7 @@
             </div>
         </div>
 
-        <div class="services-section">
+        <div class="services-section" style="display: none;">
             <h2>Manage Services</h2>
             <table class="services-table">
                 <thead>
@@ -251,6 +280,31 @@
         if (!localStorage.getItem('adminLoggedIn')) {
             window.location.href = 'admin-login.html';
         }
+
+        // Show/hide sections
+        function showSection(section) {
+            // Update button states
+            document.querySelectorAll('.nav-menu button').forEach(btn => {
+                btn.classList.remove('active');
+            });
+            document.querySelector(`.nav-menu button[onclick*="${section}"]`).classList.add('active');
+
+            // Show/hide sections
+            if (section === 'services') {
+                document.querySelector('.services-section').style.display = 'block';
+                document.querySelector('.statistics').style.display = 'none';
+                document.querySelector('.bookings-table').style.display = 'none';
+                document.querySelector('h2[style*="color: #ffcc00"]').style.display = 'none';
+            } else {
+                document.querySelector('.services-section').style.display = 'none';
+                document.querySelector('.statistics').style.display = 'grid';
+                document.querySelector('.bookings-table').style.display = 'table';
+                document.querySelector('h2[style*="color: #ffcc00"]').style.display = 'block';
+            }
+        }
+
+        // Auto-refresh bookings every 30 seconds
+        setInterval(loadBookings, 30000);
 
         // Load and display bookings
         function loadBookings() {
@@ -386,6 +440,7 @@
         // Initialize dashboard
         loadBookings();
         loadServices();
+        showSection('bookings'); // Show bookings section by default
     </script>
 </body>
 </html> 
