--- a/form.html
+++ b/form.html
@@ -339,7 +339,7 @@
 
             showVerificationMessage('Sending verification code...', true);
 
-            emailjs.send('service_aqzgkyl', 'template_yvw0bqj', templateParams)
+            emailjs.send('service_3wlgfnk', 'template_k5u3nji', templateParams)
                 .then(function(response) {
                     console.log('Email sent successfully:', response);
                     showVerificationMessage('Verification code sent! Please check your email (including spam folder).', true);
